Clarify final notebook directions / update readme

--- a/notebooks/10-cy-sphero-team-movement-demo.ipynb
+++ b/notebooks/10-cy-sphero-team-movement-demo.ipynb
@@ -124,7 +124,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "PROJ_ROOT = os.pardir\n",
@@ -148,7 +150,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Check power, robots shut down after dropping below 7 volts\n",
@@ -159,7 +163,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Check robot colors from config file\n",
@@ -171,10 +177,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "SpheroTeam.set_team_colors(bots, TEAM_COLORS)\n"
+    "# Use Team Colors to illuminate all the robots\n",
+    "SpheroTeam.set_team_colors(bots, TEAM_COLORS)"
    ]
   },
   {
@@ -193,18 +202,24 @@
    },
    "outputs": [],
    "source": [
-    "tracker = ColorTracker(config['cameraID'])\n"
+    "# This will be a number starting at 0, going up to as many cameras\n",
+    "# as your laptop has + how many are plugged in.\n",
+    "# You may have to use your camera's firmware to configure the camera \n",
+    "# before tracking will work properly: with the Logitech C920, it is called\n",
+    "# the Logitech Gaming Software.\n",
+    "tracker = ColorTracker(config['cameraID'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "imageX, imageY = tracker.image_size\n",
-    "print \"Image: {} x {} pixels\".format(imageX, imageY)\n",
-    "\n"
+    "print \"Image: {} x {} pixels\".format(imageX, imageY)"
    ]
   },
   {
@@ -216,6 +231,8 @@
    "outputs": [],
    "source": [
     "# For now, blue is the only color we can reliably track\n",
+    "# However, with more research on color filtering, you may be able to get\n",
+    "# other colors to work too.\n",
     "traceable_color = [0, 0, 255]  # RGB Blue\n",
     "\n",
     "traceable_blue = TraceableObject(\"BLUE\")\n",
@@ -232,20 +249,20 @@
    "source": [
     "# make sure everyone's light is off before calibrating.\n",
     "for bot in bots:\n",
-    "    bot.set_rgb(0,0,0)\n",
-    "    "
+    "    bot.set_rgb(0,0,0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Blue seems to be the most reliable color to track with.\n",
     "# Be suspicious if any of the offsets are 0!!!\n",
     "# the offsets of just a few select robots\n",
-    "\n",
     "\n",
     "offsets = get_team_offsets(bots, traceable_blue, traceable_color, tracker)"
    ]
@@ -280,29 +297,20 @@
    },
    "outputs": [],
    "source": [
-    "offsets = team_redo_offset(offsets, bots, 3, traceable_blue, traceable_color, tracker)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "?roll_polygon"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Roll in a square to show it's working\n",
     "# can roll in single direction using roll-push.\n",
-    "# roll_polygon(bots, 3, offsets, 0, speed=50, TIMEOUT=1000)\n"
+    "# roll_polygon(bots, 3, offsets, 0, speed=50, TIMEOUT=1000)"
    ]
   },
   {
@@ -313,18 +321,12 @@
    },
    "outputs": [],
    "source": [
+    "# Confirm manually that each robot is rolling in the same direction here\n",
+    "# before proceeding. If not, recalibrate the robots that are \n",
+    "# going in the wrong direction!\n",
     "for i, bot in enumerate(bots):\n",
-    "#     offsets = team_redo_offset(offsets, bots, i, traceable_blue, traceable_color, tracker)\n",
     "    SpheroTeam.roll_sphero(bot, 60, 0, offsets[i])\n",
-    "    \n",
-    "    time.sleep(1.5)\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    "
+    "    time.sleep(1.5)"
    ]
   },
   {
@@ -335,7 +337,9 @@
    },
    "outputs": [],
    "source": [
-    "?SpheroTeam.roll_sphero\n"
+    "# Example of how to redo robot in index 3\n",
+    "iRedo = 3\n",
+    "offsets = team_redo_offset(offsets, bots, iRedo, traceable_blue, traceable_color, tracker)"
    ]
   },
   {
@@ -359,27 +363,19 @@
    },
    "outputs": [],
    "source": [
-    "SpheroTeam.set_team_colors(bots, TEAM_COLORS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Square Video\n",
-    "\n",
+    "# Square formation for video\n",
     "roll_polygon(bots, 4, offsets, 0, speed=120, TIMEOUT=1000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# Up down left right\n",
+    "# Up down left right formation for video\n",
     "roll_polygon(bots, 1, offsets, 180, speed=60, TIMEOUT=2000)\n",
     "time.sleep(1.5)\n",
     "\n",
@@ -388,7 +384,6 @@
     "\n",
     "roll_polygon(bots, 1, offsets, 90, speed=60, TIMEOUT=1500)\n",
     "time.sleep(1.5)\n",
-    "\n",
     "\n",
     "roll_polygon(bots, 1, offsets, 270, speed=60, TIMEOUT=1500)\n",
     "time.sleep(1.5)"
@@ -424,7 +419,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print imageX\n",
@@ -498,7 +495,7 @@
    },
    "outputs": [],
    "source": [
-    "from SpheroTeam.navigation import get_rectangle_targets\n"
+    "from SpheroTeam.navigation import get_rectangle_targets"
    ]
   },
   {
@@ -510,15 +507,13 @@
    },
    "outputs": [],
    "source": [
-    "# Send robots to a cluster around 300, 150\n",
+    "# Send robots to a cluster around 300, 150 for video demo\n",
     "targets = [ [300, 150 + i*5] for i in range(len(bots))] # space out the robots along x = 100\n",
     "\n",
+    "# If you want to use the rectangle tracker, use this line instead\n",
+    "# targets = get_rectangle_targets(args)\n",
     "\n",
-    "\n",
-    "\n",
-    "# targets = get_rectangle\n",
-    "\n",
-    "team_go_to_points(bots, targets, offsets, traceable_blue, traceable_color, imageX, imageY, tracker, stopRadius=15, Kp=.26)\n"
+    "team_go_to_points(bots, targets, offsets, traceable_blue, traceable_color, imageX, imageY, tracker, stopRadius=15, Kp=.26)"
    ]
   },
   {
@@ -538,13 +533,16 @@
    },
    "outputs": [],
    "source": [
-    "SpheroTeam.set_team_colors(bots, TEAM_COLORS)    \n"
+    "# Turn on team colors for visual impact\n",
+    "SpheroTeam.set_team_colors(bots, TEAM_COLORS)    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Test a pentagon\n",
@@ -580,27 +578,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Roll all team along angle 0 at a speed of 70 for 3 seconds\n",
-    "roll_push(bots, 0, 70, offsets, TIMEOUT=3000)\n",
-    "\n"
+    "# Need to avoid rolling too fast or else the robot \"slips\" on the ground\n",
+    "# and isn't able to push anymore. Requires some testing to get a good speed.\n",
+    "roll_push(bots, 0, 70, offsets, TIMEOUT=3000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Show how robots would recover from \"overshooting\" the target by going to the outside of the arena\n",
     "#, and then returning to a home area.\n",
     "\n",
-    "\n",
+    "# Recover\n",
     "team_go_to_paths(bots, recoveryPaths, offsets, traceable_blue, traceable_color, imageX, imageY, tracker)\n",
     "\n",
-    "\n"
+    "# Push forward again!\n",
+    "team_go_to_points(bots, targets, offsets, traceable_blue, traceable_color, imageX, imageY, tracker, stopRadius=15, Kp=.26)"
    ]
   },
   {
